style: added body bg color and fixed alignment of logo in navbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,6 +111,7 @@ section {
 }
 body {
   line-height: 1;
+  background-color: white;
 }
 ol,
 ul {
